style.css
/* Preset */

html {
    /*scroll-behavior: smooth;*/
    font-size: 14px;
    overflow-x: hidden;
}
body {
    margin: 0;
    font-family: 'libre baskerville';
    background-color: var(--offwhite);
    color: var(--inkblack);
}
ul {
    padding-left: 0;
    list-style: none;
}
a {
    text-decoration: none;
    color: var(--inkblack);
}
h1,h2,h3 {
    font-family: 'instrument serif';
    font-weight: normal;
    color: var(--inkblack);
    margin: 0;
}
h4,h5,h6 {
    font-family: 'mohave';
    color: var(--winered);
    font-weight:normal;
    margin: 0;
}
p {
    margin: 0;
}
h1 {
    font-size: 3rem;
}
h2 {
    font-size: 2.5rem;
}
h3 {
    font-size: 2rem;
}
h4 {
    font-size: 1.5rem;
}
h5 {
    font-size: 1rem;
}
h6 {
    font-weight: 500;
    font-size: .8rem;
}

input, legend, label {
    font-family: 'mohave';
}
nav {
    z-index: 1;
}

/* Generic Styling */

:root {
    --grid-width: 1400px;

    --winered: #a71c20;
    --aquatic: #5FC4BF;
    --offwhite: #f4f4f4;
    --darkgrey: #494949;
    --inkblack: #333333;
    --lightgrey: #dfdfdf;

    transition: color-scheme .5s;
}

::selection {
    background: var(--winered);
    color: white;
}

.cta-btn-light {
    padding: .5rem 2rem;
    background: transparent;
    border-radius: 1rem;
    color: white;
    font-family: 'mohave';
    border: white 1px solid;
    cursor: pointer;
    flex: none;
}
.cta-btn-light:hover {
    background-color: white;
    color: var(--winered);
}

.cta-btn {
    padding: .5rem 1rem;
    background: var(--winered);
    border-radius: 1rem;
    color: white;
    font-family: 'mohave';
    border: var(--winered) 1px solid;
    cursor: pointer;
    flex: none;
}
.cta-btn:hover {
    background-color: transparent;
    color: var(--winered);
}




/* NAVIGATION */

.light-dark {
    background-image: url(./sources/Light-Dark-Mode--Streamline-Sharp-Remix.svg);
}
.search {
    background-image: url(./sources/Magnifying-Glass--Streamline-Sharp-Remix.svg);
}
.jfvd {
    background-image: url('./sources/jfvd-logo.svg');
}

.control-icon {
    width: 1em;
    height: 1em;
    background-size: contain;
    transition: opacity .2s;
    opacity: .7;
}

.control-icon:hover {
    opacity: 1;
    cursor: pointer ;
}

.logo-icon {
    width: 3rem;
    height: 3rem;
    background-size: contain;
    cursor: pointer ;
}

.dissident-logo {
    font-family: 'Instrument Serif', serif;
    font-size: 2.5rem;
    line-height: 1;
}

.nav {
    width: 100%;
    padding: 0 1em;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    background: var(--offwhite);
    position:sticky;
    top: 0;
    box-sizing: border-box
}

.nav-main {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;
    gap: 2rem;
}

.nav-main p {
    margin: 0;
}

.nav-main-logo {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.abonneer {
    margin-left: auto;
}
.dissident-slogan {
    font-family: 'indie flower';
}

/* HERO */

.hero {
    height: 500px;
    display: flex;
    align-items: center;
}

.hero > div {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding-left: 20%;
    gap: .5rem;
}

/* MAIN */

section.main {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-template-areas: 
    "trending trending trending trending trending trending trending trending trending nieuwsbrief nieuwsbrief nieuwsbrief"
    "verhalen verhalen verhalen artikelen artikelen artikelen artikelen artikelen artikelen stelling stelling stelling"
    "schrijvers schrijvers schrijvers schrijvers schrijvers schrijvers schrijvers schrijvers schrijvers word-actief word-actief word-actief";
    max-width: var(--grid-width);
    margin: auto;
    gap: 1rem;
}

section.main > div {
    padding: 1rem;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 1rem;
}

.thumbnail {
    background: var(--lightgrey);
    border-radius: 1rem;
    aspect-ratio: 1/1;
}

.full-width {
    width: 100%;
}
.full-height {
    height: 100%;
}
.reset-aspect {
    aspect-ratio: unset;
}

/* MAIN Trending */

.trending {
    grid-area: trending;
}

.trending > div {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    gap: 1rem;
}

.trend {
    display: flex;
    gap: 1rem;
}
/*
.trend p, .artikel p, .verhaal h3 {
    -webkit-line-clamp: 2;
    overflow: hidden;
    text-wrap: elipses;
}
.verhaal p {
    -webkit-line-clamp: 4;
    overflow: hidden;
    text-wrap: elipses;
}
.artikel h3 {
    -webkit-line-clamp: 1;
    overflow: hidden;
    text-wrap: elipses;
}

/* MAIN nieuwsbrief */

.nieuwsbrief {
    grid-area: nieuwsbrief;
}

/* MAIN verhalen */

.verhalen {
    grid-area: verhalen;
}

/* MAIN Artikelen */

.artikelen {
    grid-area: artikelen;
}

.artikelen > div {
    display: grid;
    grid-template-rows: auto;
    gap: 1rem;
}

.artikel {
    display: flex;
    gap: 1rem;
}

.artikel > div, .verhaal > div {
    display: flex;
    flex-direction: column;
    gap: .5rem; 
}

.artikelen :first-child {
    display: flex;
    justify-content: space-between;
}

.arrow-link {
    font-family: 'mohave';
    display: flex;
    align-items: center;
    gap: 1rem;
}

/* MAIN Stelling */

.stelling {
    grid-area: stelling;
    display: flex;
    flex-direction: column;
    gap: .5rem;
}

.pie-chart {
    background:
		radial-gradient(
			circle closest-side,
			transparent 100%,
			var(--offwhite) 0
		),
		conic-gradient(
			#77CA85 0,
			#77CA85 75%,
			#CF6767 0,
			#CF6767 100%
	);
	position: relative;
	width: 15rem;
    aspect-ratio: 1/1;
	margin: 0;
    margin: auto auto;
    border: 1px solid var(--darkgrey);
    border-radius: 50%;
}

.voting {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
    color: #77CA85;
    font-family: 'mohave';
    font-size: 1.5rem;
}
/* ... */

